# sil-kit-adapters-generic-linux-io

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.devcontainer/: Dockerfile
.github/actions/build-cmake-preset/: action.yml
.github/workflows/: build-linux-release.yaml  build-linux-release.yml  trigger-adapters-ci.yaml  trigger-check-internal-info.yaml  trigger-pkg-workflow.yaml  trigger-ska-integration-tests.yaml  trigger-ska-quality-checks.yaml  trigger-testing-workflow-on-testing-repo.yaml
adapter/: AdapterFactory.cpp  AdapterFactory.hpp  CMakeLists.txt  IOAdapter.hpp  IOManager.hpp  InotifyHandler.cpp  InotifyHandler.hpp  README.md  SilKitAdapterGenericLinuxIO.cpp  SilKitAdapterGenericLinuxIO.hpp
adapter/demos/: DevicesConfig.yaml  SilKitConfig_Adapter.silkit.yaml  SilKitConfig_CANoe.silkit.yaml
adapter/demos/CANoe/: Datasource_device.vCDL  DemoPanel_device.xvp  GLIOControl_device.cfg  GLIOControl_gpio_device.can
adapter/demos/CANoe/_COData_GLIOControl_device/: DataSources.xml  Original_00002.vCODM
adapter/demos/CANoe4SW_SE/: createEnvForLinux.ps1  run.ps1  run.sh  run_adapter.sh  run_all.sh
adapter/demos/tasks_scripts/: clean_up.sh  prepare_run_silkit_registry.sh  run_adapter.sh  run_demos.sh  stop_clean_all.sh  stop_processes.sh  update_chips.sh
adapter/demos/tests/: testForwardAdapter.vtestunit.yaml
advalues/: README.md
advalues/adapter/: AdAdapter.cpp  AdAdapter.hpp  AdManager.cpp  AdManager.hpp
advalues/demos/: CMakeLists.txt  DevicesConfig.yaml  SilKitConfig_Adapter.silkit.yaml  SilKitConfig_CANoe.silkit.yaml  create_adchips.sh
advalues/demos/CANoe/: Datasource_device.vCDL  Datasource_device.vcdl  DemoPanel_device.xvp  GLIOControl_advalues_device.cfg
advalues/demos/CANoe/_COData_GLIOControl_advalues_device/: DataSources.xml  Original_00002.vCODM  Working_00002.vCODM
advalues/demos/CANoe4SW_SE/: createEnvForLinux.ps1  create_adchips_run_adapter.sh  run.ps1  run.sh  run_all.sh
advalues/demos/SimpleForward/: CMakeLists.txt  SilKitDemoGLIOAdvaluesForwardDevice.cpp
advalues/demos/tasks_scripts/: clean_up.sh  create_adchips_run_adapter.sh  start_demo.sh  update_adchip.sh
advalues/demos/tests/: testForwardAdvalues.can  testForwardAdvalues.vtesttree.yaml  testForwardAdvalues.vtestunit.yaml
chardev/: README.md
chardev/adapter/: ChardevAdapter.cpp  ChardevAdapter.hpp  ChardevManager.cpp  ChardevManager.hpp
chardev/demos/: CMakeLists.txt  DevicesConfig.yaml  SilKitConfig_Adapter.silkit.yaml  SilKitConfig_CANoe.silkit.yaml  create_chardevs.sh
chardev/demos/CANoe/: Datasource_device.vCDL  DemoPanel_device.xvp  GLIOControl_chardev_device.cfg
chardev/demos/CANoe/_COData_GLIOControl_chardev_device/: DataSources.xml  Original_00002.vCODM  Working_00002.vCODM
chardev/demos/CANoe4SW_SE/: createEnvForLinux.ps1  create_chardevs_run_adapter.sh  run.ps1  run.sh  run_all.sh  venvironment.yaml
chardev/demos/SimpleForward/: CMakeLists.txt  SilKitDemoGLIOChardevForwardDevice.cpp
chardev/demos/tasks_scripts/: clean_up.sh  create_chardevs_run_adapter.sh  start_demo.sh  update_chardev.sh
chardev/demos/tests/: testForwardChardev.can  testForwardChardev.vtesttree.yaml  testForwardChardev.vtestunit.yaml
cmake/: SilKitAdapterVersion.cmake  qnx-cross-base-toolchain.cmake
docs/man/: CMakeLists.txt  sil-kit-adapter-generic-linux-io.1
gpio/: README.md
gpio/adapter/: CMakeLists.txt  ChipDatas.cpp  ChipDatas.hpp  GpioAdapter.cpp  GpioAdapter.hpp  GpioChip.cpp  GpioChip.hpp  GpioManager.cpp  GpioManager.hpp  GpioWrapper.cpp  GpioWrapper.hpp  SilKitAdapterGPIO.cpp  SilKitAdapterGPIO.hpp
gpio/demos/: CMakeLists.txt  DevicesConfig.yaml  SilKitConfig_Adapter.silkit.yaml  SilKitConfig_CANoe.silkit.yaml  SilKitDemoDisplayGPIODevice.cpp  SilKitDemoDisplayModifyGPIODevice.cpp  SilKitDemoGPIODevice.hpp  SilKitDemoModifyGPIODevice.cpp  clean_gpio_sim.sh  create_gpio_sim.sh
gpio/demos/CANoe/: Datasource_device.vCDL  Datasource_device.vcdl  DemoPanel_device.xvp  GLIOControl_gpio_device.cfg  GPIOControl_device.can  GPIOControl_device.cfg  ProjectSettings.vtesettings
gpio/demos/CANoe/_COData_Distributed_Objects/: DataSources.xml  Original_00002.vCODM  UserAdditions.vCODM
gpio/demos/CANoe/_COData_GLIOControl_gpio_device/: DataSources.xml  Original_00002.vCODM  Working_00002.vCODM
gpio/demos/CANoe/_COData_GPIOControl_device/: DataSources.xml  Original_00002.vCODM  Working_00002.vCODM
gpio/demos/CANoe4SW_SE/: createEnvForLinux.ps1  run.ps1  run.sh  run_adapter.sh  run_all.sh  venvironment.yaml
gpio/demos/DisplayDevice/: CMakeLists.txt  SilKitDemoDisplayGPIODevice.cpp  SilKitDemoModifyGPIODevice.cpp
gpio/demos/SimpleForward/: CMakeLists.txt  SilKitDemoGLIOGpioForwardDevice.cpp
gpio/demos/tasks_scripts/: clean_up.sh  run_adapter.sh  start_demo.sh  update_gpio.sh
gpio/demos/tests/: testForwardGpio.can  testForwardGpio.vtesttree.yaml  testForwardGpio.vtestunit.yaml
util/: CMakeLists.txt  DemoParsing.hpp  Exceptions.hpp  FileHelper.cpp  FileHelper.hpp  Parsing.cpp  Parsing.hpp  SignalHandler.hpp  YamlHelper.cpp  YamlHelper.hpp
